Fix selectize.js dropdowns getting cut off. Upgrade selectize to 0.8.2

--- a/app/assets/stylesheets/admin/base.css.scss
+++ b/app/assets/stylesheets/admin/base.css.scss
@@ -332,6 +332,10 @@ a:hover {
   width: 100%;
 }
 
+.selectize-dropdown {
+  z-index: 9999;
+}
+
 .record-details {
   text-align: right;
   font-size: 11px;
